# gpudsp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/include/: api.h
core/include/audio/: audio.h
core/include/dsp/: dsp.h
core/shaders/: bit_reverse.frag  dsp.vert  eq.frag  fft.frag  hanning.frag
core/src/: api.c
core/src/audio/: audio.c
core/src/dsp/: dsp.c
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: index.html  index.tsx
frontend/src/components/: AudioPlayer.tsx  Slider.tsx  SliderArray.tsx
frontend/src/features/: App.tsx
frontend/src/styles/: index.css
frontend/src/styles/components/: AudioPlayer.css  Slider.css  SliderArray.css
frontend/src/styles/features/: App.css
frontend/src/types/: declarations.d.ts
include/al/: Buffer.hpp  Context.hpp  Device.hpp  Source.hpp
include/audio/: Buffer.hpp  Context.hpp  Device.hpp  Source.hpp
include/core/: App.hpp  Audio.hpp  Event.hpp  Layer.hpp  Window.hpp
include/datastruct/: RingBuffer.hpp
include/gl/: Program.hpp  Shader.hpp
include/layers/: AudioGenerator.hpp  AudioPlayer.hpp
include/wav/: WAVReader.hpp
src/: main.cpp
src/al/: Buffer.cpp  Context.cpp  Device.cpp  Source.cpp
src/audio/: Buffer.cpp  Context.cpp  Device.cpp  Source.cpp
src/core/: App.cpp  Audio.cpp  Layer.cpp  Window.cpp
src/dsp/: gain.glsl  sine.glsl
src/gl/: Program.cpp  Shader.cpp
src/layers/: AudioGenerator.cpp  AudioPlayer.cpp
src/wav/: WAVReader.cpp
